--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <div class="uk-panel uk-position-z-index uk-text-center uk-text-left@m" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;">
                                    <br><br>
                                     <h2 style="font-size: 35px;" class="uk-h2  uk-margin-small uk-margin@m">Meet $KLERF</h2>
-                                    <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted">Introducing $Slerf killer, the ultimate meme coin poised to revolutionize the crypto space! With its groundbreaking technology and community-driven ethos, Don't miss out on the opportunity to be part of something truly extraordinary.</p>
+                                    <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted">Introducing $KLERF killer, the ultimate meme coin poised to revolutionize the crypto space! With its groundbreaking technology and community-driven ethos, Don't miss out on the opportunity to be part of something truly extraordinary.</p>
                                     <a href="buylink" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top"><hr>
                                             <span>BUY </span>
                                             <i class="uk-text-bold"></i>
@@ -221,7 +221,7 @@
                                         <div class="uk-panel" data-anime="opacity:[0, 1]; translateX:[24, 0]; onview: -250; delay: 300;">
                                             <span class="uk-text-overline uk-text-gradient">About $KLERF</span>
                                             <h3 class="uk-h3 uk-h1@m">$KLERF</h3>
-                                            <p class="uk-text-large@m">$KLERF ($KLERF) is not just a token; it's a movement. Born from the spirit of fearlessness and boundless ambition, $KLERF is more than a cryptocurrency – it's a community-driven force propelling you towards financial sovereignty. With a deflationary mechanism, secure blockchain, and a passionate community, $KLERF is rewriting the rules of the crypto game. Join us on this epic journey, where every transaction is a step closer to the moon!  #$KLERF #CryptoRevolution</p>
+                                            <p class="uk-text-large@m">Buckle up, meme enthusiasts and crypto pioneers, because $KLERF is here to shake up the meme coin scene on Solana like never before! Born from the fiery depths of internet culture and powered by the lightning-fast Solana blockchain, $KLERF is more than just a coin—it's a movement. With its unstoppable momentum and hilarious memes, $KLERF is rewriting the rules of the game, bringing joy and laughter to the world of decentralized finance. Join our vibrant community of meme lovers, hodlers, and Solana enthusiasts as we embark on this epic journey to the moon and beyond. Don't miss your chance to be a part of history—jump on board the $KLERF rocketship today and let's soar to new heights together! 🚀🌕</p>
 <br> <br> <br>CA : xxxxxxxxxxxxxxxxxxxxxxxx
                                         </div>
                                     </div>
