--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <div class="uk-navbar-item">
                                     <ul class="uk-subnav uk-subnav-small uk-visible@m">
                                         <li>
-                                            <a href="twitterlink"><i class="fa-brands fa-x-twitter"></i></a>
+                                            <a href="Https://x.com/KlerfSol"><i class="fa-brands fa-x-twitter"></i></a>
                                         </li>
 
                                     </ul>
@@ -133,7 +133,7 @@
                                         </a>
                                         <ul class="uk-subnav uk-subnav-small uk-visible@m">
                                         <li>
-                                            <a href="twitterlink"><i class="uk-icon uk-icon-medium unicon-logo-twitter"></i></a>
+                                            <a href="Https://x.com/KlerfSol"><i class="uk-icon uk-icon-medium unicon-logo-twitter"></i></a>
                                         </li>
 
                                     </ul>
@@ -177,7 +177,7 @@
                                             <i class="uk-text-bold"></i>
                                         </a>
                                     
-                                        <a href="tglink" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+                                        <a href="https://t.me/KlerfSol" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>Telegram</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
@@ -657,7 +657,7 @@
                         <img class="uk-position-top-right" width="40" src=" assets/images/objects/ethereum-02.png" alt="Object" style="top: 0%; right: -16%">
                         <img class="uk-position-bottom-left" width="48" src=" assets/images/objects/bitcoin-01.png" alt="Object" style="bottom: 16%; left: -8%">
                         <h4 class="uk-h3 uk-heading-d1@m">Join the $KLERF community!</h4>
-                        <a href="tglink" class="uk-button uk-button-small uk-button-large@m uk-button-gradient uk-margin-small-top uk-margin-large-top@m">Join community</a>
+                        <a href="https://t.me/KlerfSol" class="uk-button uk-button-small uk-button-large@m uk-button-gradient uk-margin-small-top uk-margin-large-top@m">Join community</a>
                     </div>
                 </div>
             </div>
@@ -677,10 +677,10 @@
                             <div>
                                 <ul class="uk-subnav uk-subnav-small uk-text-muted uk-flex-center">
                                     <li>
-                                        <a href="twitterlink"><i class="fa-brands fa-x-twitter"></i></span></a>
+                                        <a href="Https://x.com/KlerfSol"><i class="fa-brands fa-x-twitter"></i></span></a>
                                     </li>
                                     <li class="uk-margin-small-left">
-                                        <a href="tglink" data-uk-totop="" data-uk-scroll><i class="fa-brands fa-telegram"></i></a>
+                                        <a href="https://t.me/KlerfSol" data-uk-totop="" data-uk-scroll><i class="fa-brands fa-telegram"></i></a>
                                     </li>
                                 </ul>
                             </div>
