--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                     <div class="uk-panel uk-width-xlarge@m uk-position-z-index" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;">
                         <img class="uk-position-top-left" width="24" src=" assets/images/objects/circle-01.png" alt="Object" style="top: 0%; left: -16%">
                         <img class="uk-position-bottom-right" width="24" src=" assets/images/objects/x.png" alt="Object" style="bottom: 16%; right: -8%">
-                        <img class="uk-position-top-right" width="40" src=" assets/images/objects/ethereum-02.png" alt="Object" style="top: 0%; right: -16%">
+                        <!-- <img class="uk-position-top-right" width="40" src=" assets/images/objects/ethereum-02.png" alt="Object" style="top: 0%; right: -16%"> -->
                         <!-- <img class="uk-position-bottom-left" width="48" src=" assets/images/objects/bitcoin-01.png" alt="Object" style="bottom: 16%; left: -8%"> -->
                         <h4 class="uk-h3 uk-heading-d1@m">Join the $KLERF community!</h4>
                         <a href="https://t.me/KlerfSol" class="uk-button uk-button-small uk-button-large@m uk-button-gradient uk-margin-small-top uk-margin-large-top@m">Join community</a>
