--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
         <img class="uk-width-small uk-flex-center uk-margin-auto uk-margin-medium uk-margin-large@m" src="assets/images/dd-removebg.png" alt="Divider">
         <!-- how to buy start -->
-        <div id="uni_buy" class="uni-buy uk-section uk-section-xlarge@m uk-panel">
+        <!-- <div id="uni_buy" class="uni-buy uk-section uk-section-xlarge@m uk-panel">
             <div class="uk-container uk-container-small">
                 <header class="uk-grid-xsmall uk-flex-center uk-flex-middle uk-grid" data-uk-grid data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 200;">
                     <div class="uk-panel uk-text-center">
@@ -638,7 +638,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- how to buy end -->
 
